# pulumi-playground

./: .gitignore  README.md  Taskfile.yml  devenv.nix  pyproject.toml
app/: Pulumi.yaml  __main__.py
envs/aws/: .envrc
envs/localstack/: .envrc  Pulumi.dev.yaml  Pulumi.yaml
envs/pulumi/: .env  .envrc
tools/taskfiles/: automation.taskfile.yml
tools/taskfiles/lib/: localstack.taskfile.yaml  pulumi.aws.taskfile.yaml  pulumi.gcp.taskfile.yaml  pulumi.localstack.taskfile.yaml
